[gd_scene load_steps=21 format=3 uid="uid://bd146hink0coy"]

[ext_resource type="Texture2D" uid="uid://dw5fubqtnb7we" path="res://Assets/Tilemaps/DesertTileset.png" id="1_d3unl"]
[ext_resource type="Script" path="res://desert_room.gd" id="1_w386a"]
[ext_resource type="PackedScene" uid="uid://be3fpwoys47ky" path="res://cowboy_player.tscn" id="2_10jt5"]
[ext_resource type="Texture2D" uid="uid://58lyhuaolr4f" path="res://Assets/Tilemaps/tempWall.png" id="3_mjflq"]
[ext_resource type="AudioStream" uid="uid://klnmu5125dt" path="res://Assets/Sound/Music/44 Forest (Forest Theme GAMEREADY).ogg" id="5_rc6bk"]
[ext_resource type="FontFile" uid="uid://b1iy1e5pnw0od" path="res://Assets/hud assets/GothicPixels.ttf" id="6_45l3r"]
[ext_resource type="Script" path="res://wave_label.gd" id="7_7cw2e"]

[sub_resource type="TileMapPattern" id="TileMapPattern_x3a4p"]
tile_data = PackedInt32Array(0, 65536, 1, 65536, 0, 1, 1, 65536, 1, 65537, 0, 2)

[sub_resource type="TileMapPattern" id="TileMapPattern_olwcv"]
tile_data = PackedInt32Array(0, 0, 1, 65536, 65536, 1, 1, 0, 1, 65537, 0, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_vt0e7"]
tile_data = PackedInt32Array(0, 0, 1, 65536, 0, 1, 1, 0, 1, 65537, 65536, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_2iebo"]
tile_data = PackedInt32Array(0, 65536, 1, 65536, 0, 1, 1, 65536, 1, 65537, 65536, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_4rcws"]
tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 1, 1, 65536, 1, 65537, 65536, 1)

[sub_resource type="TileMapPattern" id="TileMapPattern_vvfuq"]
tile_data = PackedInt32Array(0, 65536, 1, 65536, 65536, 1, 1, 65536, 1, 65537, 65536, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ycwy4"]
resource_name = "Desert"
texture = ExtResource("1_d3unl")
margins = Vector2i(16, 16)
separation = Vector2i(16, 16)
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q7udy"]
texture = ExtResource("3_mjflq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSet" id="TileSet_vjrfc"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 7
physics_layer_0/collision_mask = 7
sources/0 = SubResource("TileSetAtlasSource_ycwy4")
sources/1 = SubResource("TileSetAtlasSource_q7udy")
pattern_0 = SubResource("TileMapPattern_x3a4p")
pattern_1 = SubResource("TileMapPattern_olwcv")
pattern_2 = SubResource("TileMapPattern_vt0e7")
pattern_3 = SubResource("TileMapPattern_2iebo")
pattern_4 = SubResource("TileMapPattern_4rcws")
pattern_5 = SubResource("TileMapPattern_vvfuq")

[sub_resource type="LabelSettings" id="LabelSettings_ns8pr"]
font = ExtResource("6_45l3r")
font_size = 30
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.65098)

[sub_resource type="Animation" id="Animation_wbf1a"]
resource_name = "wave_fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveLabel:label_settings:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.65098), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pvccq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WaveLabel:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WaveLabel:label_settings:shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.65098)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4u4k"]
_data = {
"RESET": SubResource("Animation_pvccq"),
"wave_fade": SubResource("Animation_wbf1a")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_w386a")

[node name="DesertTile" type="TileMap" parent="."]
tile_set = SubResource("TileSet_vjrfc")
format = 2
layer_0/name = "0"
layer_0/tile_data = PackedInt32Array(393242, 65536, 2)
layer_1/name = "1"

[node name="CowboyPlayer" parent="." instance=ExtResource("2_10jt5")]
position = Vector2(212, 255)

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rc6bk")
volume_db = -20.0
autoplay = true

[node name="Gui" type="CanvasLayer" parent="."]

[node name="WaveLabel" type="Label" parent="Gui"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -138.5
offset_top = 114.0
offset_right = 138.5
offset_bottom = 145.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.966667, 0.966667, 0.966667, 1)
text = "Placeholder text"
label_settings = SubResource("LabelSettings_ns8pr")
horizontal_alignment = 1
script = ExtResource("7_7cw2e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gui/WaveLabel"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_c4u4k")
}

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
